fix: remove extra import files

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,17 +2,48 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-TMUX_FZF_LAUNCH_KEY="a"
-set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin"
+#options
+set -s escape-time 0
+set -g status-interval 1
+set -g mouse on
+set -g mode-keys vi
+set -s set-clipboard on
+set -g base-index 1
+set -g pane-base-index 1
+
+#terminfo
+set-option -ga terminal-features ',xterm-256color:Tc'
+set-option -sa terminal-features ',xterm-256color:RGB'
+set-option -ga terminal-features ",xterm-256color:usstyle"
+
+#theme
+set -g status-style bg='#272727',fg='darkgray'
+set -g status-right '%a%l:%M %S %p' 
+set-window-option -g window-status-format '#[fg=greenbb] #I '
+set-window-option -g window-status-current-format "#[bg=green,fg=black] #I " 
 
 
+#key bindings
+bind r source-file ~/.config/tmux/tmux.conf
+bind c new-window -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
+bind R command-prompt  "rename-window '%%'"
+bind x kill-pane
+bind e set-option status
+bind K kill-server
+bind w choose-session -F "#W #[fg=#45475a] #{s|$HOME|~|:pane_current_path}"
+bind -n "S-M-Right" swap-window -t +1\; next\;
+bind -n "S-M-Left" swap-window -t -1\; prev\; 
+bind -n "M-Left" prev
+bind -n "M-Right" next
+bind -r n next-window
+bind -r p previous-window 
+bind -r 'Pageup' resize-pane -U 5
+bind -r 'Pagedown' resize-pane -D 5
+bind -r 'C-Pageup' resize-pane -R 5
+bind -r 'C-Pagedown' resize-pane -L 5
 
-
-source-file "~/.config/tmux/theme.conf"
-source-file "~/.config/tmux/term.conf"
-source-file "~/.config/tmux/options.conf"
-source-file "~/.config/tmux/vi.conf"
-source-file "~/.config/tmux/keymap.conf" 
 source-file "~/.config/tmux/plugins.conf"
 
 
