--- a/plugins.conf
+++ b/plugins.conf
@@ -2,7 +2,7 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'charlietag/tmux-split-statusbar'
-set -g @plugin 'tmux-plugins/tmux-open'
+#set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-logging'
