--- a/tmux.conf
+++ b/tmux.conf
@@ -18,7 +18,7 @@ set-option -ga terminal-features ",xterm-256color:usstyle"
 
 #theme
 set -g status-style bg='#272727',fg='darkgray'
-set -g status-right '%a%l:%M %S %p' 
+set -g status-right "#[fg=cyan]%d %b %I:%M %p "
 set-window-option -g window-status-format '#[fg=greenbb] #I '
 set-window-option -g window-status-current-format "#[bg=green,fg=black] #I " 
 
@@ -44,7 +44,9 @@ bind -r 'Pagedown' resize-pane -D 5
 bind -r 'C-Pageup' resize-pane -R 5
 bind -r 'C-Pagedown' resize-pane -L 5
 
+#plugins
 source-file "~/.config/tmux/plugins.conf"
+source-file "~/.config/tmux/vi.conf"
 
 
 # disable nerd font icons :-) 
