fix: change  time color

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,8 +18,8 @@ set-option -ga terminal-features ",xterm-256color:usstyle"
 
 #theme
 set -g status-style bg='#272727',fg='darkgray'
-set -g status-right "#[fg=cyan]%d %b %I:%M %p "
-set-window-option -g window-status-format '#[fg=greenbb] #I '
+set -g status-right "#[fg=green]%d %b %I:%M %p "
+set-window-option -g window-status-format '#[fg=green] #I '
 set-window-option -g window-status-current-format "#[bg=green,fg=black] #I " 
 
 
