--- a/tmux.conf
+++ b/tmux.conf
@@ -17,7 +17,7 @@ set-option -sa terminal-features ',xterm-256color:RGB'
 set-option -ga terminal-features ",xterm-256color:usstyle"
 
 #theme
-set -g status-style bg='#272727',fg='darkgray'
+set -g status-style bg='default',fg='darkgray'
 set -g status-left "#[fg=red] #S "
 set -g status-right "#[fg=#4c4d4c]%d %b %I:%M %p "
 set-window-option -g window-status-format '#[fg=green] #I '
