--- a/tmux.conf
+++ b/tmux.conf
@@ -17,11 +17,12 @@ set-option -sa terminal-features ',xterm-256color:RGB'
 set-option -ga terminal-features ",xterm-256color:usstyle"
 
 #theme
+set -g status-position top
 set -g status-style bg='default',fg='darkgray'
-set -g status-left "#[fg=red] #S "
-set -g status-right "#[fg=#4c4d4c]%d %b %I:%M %p "
-set-window-option -g window-status-format '#[fg=green] #I '
-set-window-option -g window-status-current-format "#[bg=green,fg=black] #I " 
+set -g status-left ""
+set -g status-right "#[fg=#4c4d4c]%d %b %I:%M %p #[fg=black,bg=#8d8f8d] #S "
+set-window-option -g window-status-format '#[fg=#8d8f8d] #I '
+set-window-option -g window-status-current-format "#[bg=#8d8f8d,fg=black] #I " 
 
 
 #key bindings
