--- a/tmux.conf
+++ b/tmux.conf
@@ -17,7 +17,7 @@ set-option -sa terminal-features ',xterm-256color:RGB'
 set-option -ga terminal-features ",xterm-256color:usstyle"
 
 #theme
-set -g status-position top
+set -g status-position bottom
 set -g status-style bg='default',fg='darkgray'
 set -g status-left ""
 set -g status-right "#[fg=#4c4d4c]%d %b %I:%M %p #[fg=black,bg=#8d8f8d] #S "
