--- a/tmux.conf
+++ b/tmux.conf
@@ -12,15 +12,21 @@ set -g base-index 1
 set -g pane-base-index 1
 
 #terminfo
-set-option -ga terminal-features ',xterm-256color:Tc'
-set-option -sa terminal-features ',xterm-256color:RGB'
-set-option -ga terminal-features ",xterm-256color:usstyle"
+set -g default-terminal "alacritty"
+set-option -ga terminal-overrides ",alacritty:Tc"
+set-option -ga terminal-overrides ",alacritty:RGB"
+set-option -ga terminal-overrides ",alacritty:usstyle"
+# set-option -ga terminal-features ',xterm-256color:Tc'
+# set-option -sa terminal-features ',xterm-256color:RGB'
+# set-option -ga terminal-features ",xterm-256color:usstyle"
 
 #theme
-set -g status-position bottom
+set -g status-position top
 set -g status-style bg='default',fg='darkgray'
-set -g status-left ""
-set -g status-right "#[fg=#4c4d4c]%d %b %I:%M %p #[fg=black,bg=#8d8f8d] #S "
+set -g status-justify right
+set -g status-left "#[fg=#4c4d4c]#S #[fg=#a6adc8,bold]#{=|-24|…;s|$HOME|~|:pane_current_path}"
+set -g status-left-length 100
+set -g status-right ""
 set-window-option -g window-status-format '#[fg=#8d8f8d] #I '
 set-window-option -g window-status-current-format "#[bg=#8d8f8d,fg=black] #I " 
 
