change status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,13 +22,13 @@ set-option -ga terminal-overrides ",alacritty:usstyle"
 
 #theme
 set -g status-position top
-set -g status-style bg='default',fg='darkgray'
+set -g status-style bg='#181825',fg='darkgray'
 set -g status-justify right
-set -g status-left "#[fg=#4c4d4c]#S #[fg=#a6adc8,bold]#{=|-24|…;s|$HOME|~|:pane_current_path}"
+set -g status-left " #[fg=#4c4d4c]session: #S  cwd: #{=|-24|…;s|$HOME|~|:pane_current_path}"
 set -g status-left-length 100
-set -g status-right ""
-set-window-option -g window-status-format '#[fg=#8d8f8d] #I '
-set-window-option -g window-status-current-format "#[bg=#8d8f8d,fg=black] #I " 
+set -g status-right ' '
+set-window-option -g window-status-format "#[noitalics,fg=#8d8f8d]#I"
+set-window-option -g window-status-current-format "#[noitalics,fg=#89b4fa]#I" 
 
 
 #key bindings
@@ -52,13 +52,28 @@ bind -r 'Pagedown' resize-pane -D 5
 bind -r 'C-Pageup' resize-pane -R 5
 bind -r 'C-Pagedown' resize-pane -L 5
 
-#plugins
-source-file "~/.config/tmux/plugins.conf"
+set -g @continuum-restore 'off'
+set -g @continuum-boot 'off'
+set -g @continuum-boot-options 'alacritty'
+
+set -g @resurrect-strategy-nvim 'session'
+
 source-file "~/.config/tmux/vi.conf"
 
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'charlietag/tmux-split-statusbar'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-logging'
+set -g @plugin 'sainnhe/tmux-fzf'
 
-# disable nerd font icons :-) 
-set-option -g automatic-rename-format "#W" 
+run '~/.config/tmux/plugins/tpm/tpm'
+
+#plugins
+
 
 
 
