--- a/tmux.conf
+++ b/tmux.conf
@@ -22,13 +22,16 @@ set-option -ga terminal-overrides ",alacritty:usstyle"
 
 #theme
 set -g status-position top
-set -g status-style bg='#181825',fg='darkgray'
+set -g status-style bg='default',fg='darkgray'
+set -g pane-border-style fg='#181825'
+set -g pane-active-border-style fg='#181825'
+set -g message-style bg='#1e1e2e',fg='#a6adc8'
 set -g status-justify right
-set -g status-left " #[fg=#4c4d4c]session: #S  cwd: #{=|-24|…;s|$HOME|~|:pane_current_path}"
+set -g status-left " #[fg=#b4befe,bold]#S #[fg=#9399b2,nobold] #{=|-24|…;s|$HOME|~|:pane_current_path} "
 set -g status-left-length 100
-set -g status-right ' '
-set-window-option -g window-status-format "#[noitalics,fg=#8d8f8d]#I"
-set-window-option -g window-status-current-format "#[noitalics,fg=#89b4fa]#I" 
+set -g status-right ''
+set-window-option -g window-status-format "#[noitalics,fg=#b4befe] #I "
+set-window-option -g window-status-current-format "#[noitalics,bg=#313244,fg=#b4befe] #I " 
 
 
 #key bindings
@@ -40,9 +43,9 @@ bind R command-prompt  "rename-window '%%'"
 bind x kill-pane
 bind e set-option status
 bind K kill-server
-bind w choose-session -F "#W #[fg=#45475a] #{s|$HOME|~|:pane_current_path}"
 bind -n "S-M-Right" swap-window -t +1\; next\;
 bind -n "S-M-Left" swap-window -t -1\; prev\; 
+bind C-p choose-session -F "#W #[fg=#45475a] #{s|$HOME|~|:pane_current_path}"
 bind -n "M-Left" prev
 bind -n "M-Right" next
 bind -r n next-window
