add the switch script

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,7 +21,7 @@ set-option -ga terminal-overrides ",alacritty:usstyle"
 # set-option -ga terminal-features ",xterm-256color:usstyle"
 
 #theme
-set -g status-position top
+set -g status-position bottom
 set -g status-style bg='default',fg='darkgray'
 set -g pane-border-style fg='#181825'
 set -g pane-active-border-style fg='#181825'
@@ -45,7 +45,6 @@ bind e set-option status
 bind K kill-server
 bind -n "S-M-Right" swap-window -t +1\; next\;
 bind -n "S-M-Left" swap-window -t -1\; prev\; 
-bind C-p choose-session -F "#W #[fg=#45475a] #{s|$HOME|~|:pane_current_path}"
 bind -n "M-Left" prev
 bind -n "M-Right" next
 bind -r n next-window
@@ -54,6 +53,15 @@ bind -r 'Pageup' resize-pane -U 5
 bind -r 'Pagedown' resize-pane -D 5
 bind -r 'C-Pageup' resize-pane -R 5
 bind -r 'C-Pagedown' resize-pane -L 5
+
+
+bind C-p choose-session -F "#W #[fg=#45475a] #{s|$HOME|~|:pane_current_path}"
+bind -n M-Space run-shell "tmux neww ~/.config/tmux/scripts/switch.sh"  
+
+
+
+
+
 
 set -g @continuum-restore 'off'
 set -g @continuum-boot 'off'
