add switch script

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,10 +53,8 @@ bind -r 'Pageup' resize-pane -U 5
 bind -r 'Pagedown' resize-pane -D 5
 bind -r 'C-Pageup' resize-pane -R 5
 bind -r 'C-Pagedown' resize-pane -L 5
-
-
 bind C-p choose-session -F "#W #[fg=#45475a] #{s|$HOME|~|:pane_current_path}"
-bind -n M-Space run-shell "tmux neww ~/.config/tmux/scripts/switch.sh"  
+bind -n "M-Space" run-shell "tmux popup -E ~/.config/tmux/scripts/switch.sh"  
 
 
 
@@ -74,12 +72,10 @@ source-file "~/.config/tmux/vi.conf"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'charlietag/tmux-split-statusbar'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-logging'
-set -g @plugin 'sainnhe/tmux-fzf'
 
 run '~/.config/tmux/plugins/tpm/tpm'
 
