--- a/vi.conf
+++ b/vi.conf
@@ -29,4 +29,7 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 bind-key -T copy-mode Escape send-keys -X cancel
 bind-key -T copy-mode-vi Escape send-keys -X cancel
+set-window-option -g mode-keys vi
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
