--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,7 @@ set -g status-justify right
 set -g status-left " #[fg=#b4befe,bold]#S #[fg=#9399b2,nobold] #{=|-24|…;s|$HOME|~|:pane_current_path} "
 set -g status-left-length 100
 set -g status-right ''
+set -g detach-on-destroy off
 set-window-option -g window-status-format "#[noitalics,fg=#b4befe] #I "
 set-window-option -g window-status-current-format "#[noitalics,bg=#313244,fg=#b4befe] #I " 
 
@@ -40,9 +41,11 @@ bind c new-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
 bind R command-prompt  "rename-window '%%'"
-bind x kill-pane
 bind e set-option status
+bind x kill-pane
+bind k kill-session 
 bind K kill-server
+bind "'" switch-client -l
 bind -n "S-M-Right" swap-window -t +1\; next\;
 bind -n "S-M-Left" swap-window -t -1\; prev\; 
 bind -n "M-Left" prev
@@ -55,6 +58,7 @@ bind -r 'C-Pageup' resize-pane -R 5
 bind -r 'C-Pagedown' resize-pane -L 5
 bind C-p choose-session -F "#W #[fg=#45475a] #{s|$HOME|~|:pane_current_path}"
 bind -n "M-Space" run-shell "tmux popup -E ~/.config/tmux/scripts/switch.sh"  
+bind -n "F1" run-shell "~/.config/tmux/scripts/jump.sh lazygit"  
 
 
 
