--- a/tmux.conf
+++ b/tmux.conf
@@ -21,15 +21,15 @@ set-option -ga terminal-overrides ",alacritty:usstyle"
 # set-option -ga terminal-features ",xterm-256color:usstyle"
 
 #theme
-set -g status-position bottom
+set -g status-position top
 set -g status-style bg='default',fg='darkgray'
 set -g pane-border-style fg='#181825'
 set -g pane-active-border-style fg='#181825'
 set -g message-style bg='#1e1e2e',fg='#a6adc8'
-set -g status-justify right
-set -g status-left " #[fg=#b4befe,bold]#S #[fg=#9399b2,nobold] #{=|-24|…;s|$HOME|~|:pane_current_path} "
+set -g status-justify left
+set -g status-left "#[bg=#181825,fg=#b4befe,bold] #S "
 set -g status-left-length 100
-set -g status-right ''
+set -g status-right " #[fg=#9399b2,nobold] #{=|-24|…;s|$HOME|~|:pane_current_path} "
 set -g detach-on-destroy off
 set-window-option -g window-status-format "#[noitalics,fg=#b4befe] #I "
 set-window-option -g window-status-current-format "#[noitalics,bg=#313244,fg=#b4befe] #I " 
@@ -45,7 +45,7 @@ bind e set-option status
 bind x kill-pane
 bind k kill-session 
 bind K kill-server
-bind "'" switch-client -l
+bind C-l switch-client -l
 bind -n "S-M-Right" swap-window -t +1\; next\;
 bind -n "S-M-Left" swap-window -t -1\; prev\; 
 bind -n "M-Left" prev
@@ -57,7 +57,7 @@ bind -r 'Pagedown' resize-pane -D 5
 bind -r 'C-Pageup' resize-pane -R 5
 bind -r 'C-Pagedown' resize-pane -L 5
 bind C-p choose-session -F "#W #[fg=#45475a] #{s|$HOME|~|:pane_current_path}"
-bind -n "M-Space" run-shell "tmux popup -E ~/.config/tmux/scripts/switch.sh"  
+bind -n "M-Space" run-shell "tmux neww ~/.config/tmux/scripts/switch.sh"  
 bind -n "M-g" run-shell "~/.config/tmux/scripts/jump.sh lazygit"  
 
 
