--- a/tmux.conf
+++ b/tmux.conf
@@ -57,8 +57,7 @@ bind -r 'Pagedown' resize-pane -D 5
 bind -r 'C-Pageup' resize-pane -R 5
 bind -r 'C-Pagedown' resize-pane -L 5
 bind C-p choose-session -F "#W #[fg=#45475a] #{s|$HOME|~|:pane_current_path}"
-bind -n "M-Space" run-shell "tmux neww   ~/.config/tmux/scripts/switch.sh"  
-bind -n "M-g" run-shell "~/.config/tmux/scripts/jump.sh lazygit"  
+bind C-a run-shell "tmux neww   ~/.config/tmux/scripts/switch.sh"  
 
 
 
