--- a/tmux.conf
+++ b/tmux.conf
@@ -28,7 +28,7 @@ set -g pane-border-style fg='#181825'
 set -g pane-active-border-style fg='#181825'
 set -g message-style bg='#1e1e2e',fg='#a6adc8'
 set -g status-justify left
-set -g status-left "#[bg=#181825,fg=#b4befe,nobold] #S "
+set -g status-left "#[bg=#f5e0dc,fg=#1f1d2e,nobold] #S "
 set -g status-left-length 100
 set -g status-right " #[fg=#9399b2,nobold] #{=|-24|…;s|$HOME|~|:pane_current_path} "
 set -g detach-on-destroy off
