--- a/tmux.conf
+++ b/tmux.conf
@@ -21,7 +21,7 @@ set-option -ga terminal-overrides ",alacritty:usstyle"
 # set-option -ga terminal-features ",xterm-256color:usstyle"
 
 #theme
-set-option -g allow-passthrough on
+# set-option -g allow-passthrough on
 set -g status-position top
 set -g status-style bg='default',fg='darkgray'
 set -g pane-border-style fg='#181825'
