--- a/tmux.conf
+++ b/tmux.conf
@@ -22,7 +22,7 @@ set-option -ga terminal-overrides ",alacritty:usstyle"
 
 #theme
 # set-option -g allow-passthrough on
-set -g status-position top
+set -g status-position bottom
 set -g status-style bg='default',fg='darkgray'
 set -g pane-border-style fg='#181825'
 set -g pane-active-border-style fg='#181825'
