--- a/tmux.conf
+++ b/tmux.conf
@@ -58,6 +58,7 @@ bind -r 'C-Pageup' resize-pane -R 5
 bind -r 'C-Pagedown' resize-pane -L 5
 bind C-p choose-session -F "#W #[fg=#45475a] #{s|$HOME|~|:pane_current_path}"
 bind C-a run-shell "tmux neww   ~/.config/tmux/scripts/switch.sh"  
+bind C-o run-shell "tmux neww   neovide_hub_open"  
 
 
 
