--- a/tmux.conf
+++ b/tmux.conf
@@ -37,10 +37,9 @@ set-window-option -g window-status-current-format "#[noitalics,bg=#313244,fg=#b4
 
 #key bindings
 bind r source-file ~/.config/tmux/tmux.conf
-bind c new-window -c "#{pane_current_path}"
-bind v split-window -h -c "#{pane_current_path}"
-bind s split-window -v -c "#{pane_current_path}"
-bind R command-prompt  "rename-window '%%'"
+# bind c new-window -c "#{pane_current_path}"
+# bind v split-window -h -c "#{pane_current_path}"
+# bind s split-window -v -c "#{pane_current_path}"
 bind e set-option status
 bind x kill-pane
 bind k kill-session 
@@ -58,7 +57,6 @@ bind -r 'C-Pageup' resize-pane -R 5
 bind -r 'C-Pagedown' resize-pane -L 5
 bind C-p choose-session -F "#W #[fg=#45475a] #{s|$HOME|~|:pane_current_path}"
 bind C-a run-shell "tmux neww   ~/.config/tmux/scripts/switch.sh"  
-bind C-o run-shell "tmux neww   neovide_hub_open"  
 
 
 
