--- a/tmux.conf
+++ b/tmux.conf
@@ -12,17 +12,17 @@ set -g base-index 1
 set -g pane-base-index 1
 
 #terminfo
-set -g default-terminal "alacritty"
-set-option -ga terminal-overrides ",alacritty:Tc"
-set-option -ga terminal-overrides ",alacritty:RGB"
-set-option -ga terminal-overrides ",alacritty:usstyle"
+# set -g default-terminal "alacritty"
+# set-option -ga terminal-overrides ",alacritty:Tc"
+# set-option -ga terminal-overrides ",alacritty:RGB"
+# set-option -ga terminal-overrides ",alacritty:usstyle"
 # set-option -ga terminal-features ',xterm-256color:Tc'
 # set-option -sa terminal-features ',xterm-256color:RGB'
 # set-option -ga terminal-features ",xterm-256color:usstyle"
 
 #theme
 # set-option -g allow-passthrough on
-set -g status-position top
+set -g status-position bottom
 set -g status-style bg='default',fg='darkgray'
 set -g pane-border-style fg='#181825'
 set -g pane-active-border-style fg='#181825'
