--- a/tmux.conf
+++ b/tmux.conf
@@ -12,10 +12,10 @@ set -g base-index 1
 set -g pane-base-index 1
 
 #terminfo
-# set -g default-terminal "alacritty"
-# set-option -ga terminal-overrides ",alacritty:Tc"
-# set-option -ga terminal-overrides ",alacritty:RGB"
-# set-option -ga terminal-overrides ",alacritty:usstyle"
+set -g default-terminal "alacritty"
+set-option -ga terminal-overrides ",alacritty:Tc"
+set-option -ga terminal-overrides ",alacritty:RGB"
+set-option -ga terminal-overrides ",alacritty:usstyle"
 # set-option -ga terminal-features ',xterm-256color:Tc'
 # set-option -sa terminal-features ',xterm-256color:RGB'
 # set-option -ga terminal-features ",xterm-256color:usstyle"
@@ -78,7 +78,7 @@ set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-logging'
-
+set -g @plugin 'tmux-plugins/tmux-urlview'
 run '~/.config/tmux/plugins/tpm/tpm'
 
 #plugins
