--- a/tmux.conf
+++ b/tmux.conf
@@ -12,12 +12,12 @@ set -g base-index 1
 set -g pane-base-index 1
 
 #terminfo
-set -g default-terminal "alacritty"
-set-option -ga terminal-overrides ",alacritty:Tc"
-set-option -ga terminal-overrides ",alacritty:RGB"
-set-option -ga terminal-overrides ",alacritty:usstyle"
-# set -g default-terminal "tmux-256color"
-# set -ga terminal-overrides ",*256col*:Tc"
+# set -g default-terminal "alacritty"
+# set-option -ga terminal-overrides ",alacritty:Tc"
+# set-option -ga terminal-overrides ",alacritty:RGB"
+# set-option -ga terminal-overrides ",alacritty:usstyle"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 # set-option -ga terminal-features ',xterm-256color:Tc'
 # set-option -sa terminal-features ',xterm-256color:RGB'
 # set-option -ga terminal-features ",xterm-256color:usstyle"
@@ -30,12 +30,12 @@ set -g pane-border-style fg='#181825'
 set -g pane-active-border-style fg='#181825'
 set -g message-style bg='#1e1e2e',fg='#a6adc8'
 set -g status-justify left
-set -g status-left "#[fg=#fab387,bg=default,nobold]#S "
+set -g status-left "#[fg=#fab387,bg=default,nobold]#S  "
 set -g status-left-length 100
 set -g status-right " #[bg=default,fg=#757575,nobold] #{=|-24|…;s|$HOME|~|:pane_current_path} "
 set -g detach-on-destroy off
-set-window-option -g window-status-format "#[bg=default,fg=#757575] #I "
-set-window-option -g window-status-current-format "#[fg=#89b4fa,bg=defult,bold] #I " 
+set-window-option -g window-status-format "#[bg=default,fg=#757575]#I"
+set-window-option -g window-status-current-format "#[fg=#89b4fa,bg=defult,bold]#I" 
 
 #key bindings
 bind r source-file ~/.config/tmux/tmux.conf
@@ -97,4 +97,3 @@ run '~/.config/tmux/plugins/tpm/tpm'
 
 
 
-new-session -n $HOST
